--- a/index.html
+++ b/index.html
@@ -7,39 +7,55 @@
     <title>Карта Черногории на русском языке</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="css/page.css">
-    <link rel="stylesheet" href="css/switcher.css">
     <link rel="stylesheet" href="css/zoom-controls.css">
     <link rel="stylesheet" href="css/map.css">
+    <link rel="stylesheet" href="css/context-menu.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" type="image/png">
 </head>
 
-<body theme="light">
-    <div id="siteHeader">Карта Черногории на русском языке</div>
+<!-- body theme dark нужен,
+чтобы не было белого мигания при загрузке страницы -->
+<body theme="dark">
+    <div id="header">
+        <div id="logo">
+            <img alt="Логотип OpenStreetMap"
+                src="https://wiki.openstreetmap.org/w/images/7/79/Public-images-osm_logo.svg" width="30" height="30">
+            <span id="siteName">Карта Черногории на русском языке</span>
+        </div>
+        <div id="actions">
+            <div id="languageSwitcher" class="action"></div>
+            <div id="themeSwitcher" class="action"></div>
+        </div>
+    </div>
+    <div id="content"></div>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <!-- Подключаем jQuery и jQuery contextMenu -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://swisnl.github.io/jQuery-contextMenu/dist/jquery.contextMenu.min.js"></script>
 
     <script src="js/page.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/contextmenu.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/themeSwitcher.js"></script>
+    <script src="js/languageSwitcher.js"></script>
+
     <script>
         let page = new Page();
 
-        let mapContainer = document.createElement("div");
-        mapContainer.classList.add("mapContainer");
-        document.body.appendChild(mapContainer);
+        let mapContainer = document.getElementById("content");
 
         let map = new Map(page, mapContainer);
+
         map.initMap();
         map.setAttribution();
         map.setBounds();
-        map.addLanguageControl();
         map.addCustomZoomControl();
-        map.addThemeControl();
         map.addContextMenu();
+
+        let themeSwitcher = new ThemeSwitcher(page);
+        let languageSwitcher = new LanguageSwitcher(page, map);
     </script>
 </body>
 
