новое контекстное меню

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Карта Черногории на русском языке</title>
+    <title>Черногория на русском</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -22,9 +22,9 @@
 <body theme="dark">
     <div id="header">
         <div id="logo">
-            <img alt="Логотип OpenStreetMap"
-                src="https://wiki.openstreetmap.org/w/images/7/79/Public-images-osm_logo.svg" width="30" height="30">
-            <span id="siteName">Карта Черногории на русском языке</span>
+            <img alt=""
+                src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" width="30" height="30">
+            <span id="siteName">Черногория на русском</span>
         </div>
         <div id="actions">
             <div id="languageSwitcher" class="action"></div>
@@ -36,8 +36,8 @@
 
     <script src="js/page.js"></script>
     <script src="js/map.js"></script>
-    <script src="js/contextmenu.js"></script>
-    <script src="js/utils.js"></script>
+    <script src="js/contextMenu/menu.js"></script>
+    <script src="js/contextMenu/item.js"></script>
     <script src="js/themeSwitcher.js"></script>
     <script src="js/languageSwitcher.js"></script>
 
