--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/map.css">
     <link rel="stylesheet" href="css/context-menu.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/icons.css">
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" type="image/png">
 </head>
 
