добавлена возможность отображать метку по ссылке или координатам от соседа

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         map.setBounds();
         map.addCustomZoomControl();
         map.addContextMenu();
+        map.showMarkerFromURL();
 
         let themeSwitcher = new ThemeSwitcher(page);
         let languageSwitcher = new LanguageSwitcher(page, map);
