Теперь можно сконвертировать яндекс-ссылку в гугл-ссылку через сайт, так как метки теперь поддерживают меню. Исправлено отображение меток

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 
     <script src="js/page.js"></script>
     <script src="js/map.js"></script>
-    <script src="js/contextMenu/menu.js"></script>
-    <script src="js/contextMenu/item.js"></script>
+    <script src="js/Menu/menu.js"></script>
+    <script src="js/Menu/item.js"></script>
     <script src="js/themeSwitcher.js"></script>
     <script src="js/languageSwitcher.js"></script>
+    <script src="js/marker.js"></script>
+    <script src="js/markerMenu.js"></script>
 
     <script>
         let page = new Page();
